[package]
name = "paval"
version = "0.1.0"
authors = ["suhdonghwi <hwidongsuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3.0"
teloxide-macros = "0.3.2"

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
