[package]
name = "paval"
version = "0.1.0"
authors = ["suhdonghwi <hwidongsuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbot = "0.6"
tokio = { version = "0.2", features = ["macros", "process"] }

chrono = "0.4"
indoc = "1.0"
reqwest = "0.10"
lazy_static = "1.4"


